# DumberBase

./: README.md  dumberbase.py  pyproject.toml
storage/: storage_abc.py  storage_router.py
storage/engines/: local_file_system.py
tests/: test_storage.py
tests/resources/: test_storage_engine.py
